# bob-dev

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/bob_dev/: cli.py  settings.py
src/bob_dev/constants/: frameworks.py
src/bob_dev/helpers/: config_helper.py  jira_helper.py  llm_helper.py  project_helper.py
src/bob_dev/services/: __init__.py  claude.py  config.py  gitlab.py  jira.py  llm.py  project.py  terminal.py
src/bob_dev/tmp/: claude_prompt_SPLY-5205.md
tests/: test_cli.py  test_config.py  test_config_helper.py  test_jira.py  test_jira_helper.py  test_llm.py  test_llm_helper.py  test_project.py  test_project_helper.py  test_terminal.py
